<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/menu_save_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_edit"
                android:text="@string/menu_save_as" />

            <Button
                android:id="@+id/menu_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_save"
                android:text="@string/menu_save" />

            <Button
                android:id="@+id/menu_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_archive"
                android:text="@string/menu_load" />

            <Button
                android:id="@+id/menu_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_delete"
                android:text="@string/menu_delete" />

            <Button
                android:id="@+id/menu_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_revert"
                android:text="@string/menu_restart" />

            <Button
                android:id="@+id/menu_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_preferences"
                android:text="@string/menu_settings" />

            <Button
                android:id="@+id/menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_info_details"
                android:text="@string/menu_help" />

            <Button
                android:id="@+id/menu_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:onClick="onMenuButtonClicked"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_back"
                android:text="@string/menu_exit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>