<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/animated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bm_bg_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <Button
                android:id="@+id/menu_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="newGame"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_play_clip"
                android:text="@string/menu_new" />

            <Button
                android:id="@+id/menu_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="continueGame"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_forward"
                android:text="@string/menu_continue" />

            <Button
                android:id="@+id/menu_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="loadGame"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_archive"
                android:text="@string/menu_load" />

            <Button
                android:id="@+id/menu_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="showSettings"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_preferences"
                android:text="@string/menu_settings" />

            <Button
                android:id="@+id/menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="showHelp"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_info_details"
                android:text="@string/menu_help" />

            <Button
                android:id="@+id/menu_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:typeface="monospace"
                android:onClick="exitGame"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableLeft="@drawable/ic_menu_back"
                android:text="@string/menu_exit" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="1"
            android:gravity="bottom" />

    </LinearLayout>

</ScrollView>
